<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/list_item">
    <LinearLayout style="@style/TitleBar_Orange" android:gravity="center_vertical">
    	<ImageButton style="@style/TitleBarAction"
    		android:onClick="onHomeClick" android:src="@drawable/ic_home_default" />      
   		<TextView android:id="@+id/textView3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="6dip" android:textColor="@color/white" android:textStyle="bold" android:text="Network Manager" android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>
	<ImageView style="@style/Divider"/>    
    <LinearLayout android:id="@+id/status_bar" style="@style/StatusBar">
    	<LinearLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:orientation="horizontal">
	    	<LinearLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight=".8" android:orientation="vertical" android:gravity="center_vertical">
	            <TextView android:id="@+id/status_network" android:layout_width="wrap_content" android:layout_height="wrap_content" style="@style/TextShadowWhite" android:text="@string/lbl_network_profile_ip" android:textSize="20sp" android:textStyle="bold"/>
			</LinearLayout>
		 	<ImageView android:background="@drawable/gradient" android:layout_width="1dp" android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android" />
			<LinearLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="5.0dp" android:layout_weight="1" android:gravity="center_vertical" android:orientation="vertical">
	            <TextView android:id="@+id/tvGateway" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lbl_network_profile_gateway" android:textStyle="bold" android:textSize="10sp"/>
	            <TextView android:id="@+id/tvDNS1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lbl_network_profile_dns1" android:textStyle="bold" android:textSize="10sp"/>
	            <TextView android:id="@+id/tvDNS2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lbl_network_profile_dns2" android:textStyle="bold" android:textSize="10sp"/>
	        </LinearLayout>  			
		</LinearLayout>		        
    </LinearLayout>        
   	<ImageView style="@style/Divider"/>
    <ListView
    	android:id="@android:id/list"
    	android:layout_width="fill_parent"
    	android:layout_height="fill_parent"
    	android:layout_weight="1"
    	android:divider="@drawable/list_divider"
    	android:background="@android:color/transparent"/>
    <LinearLayout android:id="@+id/empty" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1" android:orientation="horizontal" android:gravity="center_vertical|center">  
	  	<TextView android:id="@+id/empty_tv"
	 			android:layout_width="wrap_content"
	   			android:layout_height="wrap_content"
	  			android:text="" 
	  			/>            
    </LinearLayout>       
	<ImageView android:background="@drawable/list_divider_bar" android:layout_width="fill_parent" android:layout_height="wrap_content" xmlns:android="http://schemas.android.com/apk/res/android" />   
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal" android:background="@color/bar_color" android:gravity="center_vertical|right">
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="2">
        </LinearLayout>         
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">
			<LinearLayout android:id="@+id/id_action_add" android:onClick="onAddProfile" android:orientation="horizontal" android:gravity="center" android:layout_width="fill_parent" android:layout_height="48dip" android:layout_margin="4dip" android:focusable="true" android:clickable="true" android:background="@drawable/list_item_bg_style">
				<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textColor="@color/bar_icon" android:textStyle="bold" android:text="@string/lbl_add_profile" android:textAppearance="?android:attr/textAppearanceMedium" />	    	        
        	</LinearLayout>            
        </LinearLayout>
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:gravity="right">
        </LinearLayout>        
    </LinearLayout>    
</LinearLayout>
