<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/list_item">
    <LinearLayout style="@style/TitleBar_Orange" android:gravity="center_vertical">
    	<ImageButton style="@style/TitleBarAction"
    		android:onClick="onHomeClick" android:src="@drawable/ic_home_default" />     
		<TextView android:id="@+id/textView3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="6dip" android:textColor="@color/white" android:textStyle="bold" android:text="Application Manager" android:textAppearance="?android:attr/textAppearanceMedium" />
    	<View style="@style/TitleBarSpring" />
    	<ImageButton style="@style/TitleBarAction"
    		android:onClick="onRefreshClick" android:src="@drawable/ic_popup_sync_6" />
    </LinearLayout>
	<ImageView style="@style/Divider"/> 
	<LinearLayout style="@style/StatusBar">    
		<TextView 
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/lbl_information"
		    android:padding="2.0dip"/>
	</LinearLayout>
	<ImageView style="@style/Divider"/> 	
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/list_item"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="2.0dip" >
        <LinearLayout
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:orientation="vertical"
            	android:layout_marginLeft="10.0dip">
	            <TextView
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/lbl_phone_memory"
	                android:textSize="@dimen/text_size_16sp"
	                android:textStyle="bold" />
				<ImageView style="@style/Divider"/> 	                   	
            	<LinearLayout
            	    android:layout_width="wrap_content"
            	    android:layout_height="wrap_content"
            	    android:orientation="horizontal"
            	    android:padding="4.0dip">
            	    <com.tresksoft.graphics.PieChart
		            	android:id="@+id/piechart_internal_memory"
		            	android:layout_width="44.0dip"
		            	android:layout_height="44.0dip"/>
            	    <LinearLayout
		            	android:layout_width="wrap_content"
		            	android:layout_height="wrap_content"
		            	android:orientation="vertical"
		            	android:layout_marginLeft="6.0dip">
			            <TextView 
			                android:id="@+id/memoria_interna_total"
			                android:layout_width="wrap_content"
			                android:layout_height="wrap_content"
			                android:text="%total%"
			                android:textSize="@dimen/text_size_12sp"/>
			            <TextView 
			                android:id="@+id/memoria_interna_disponible"
			                android:layout_width="wrap_content"
			                android:layout_height="wrap_content"
			                android:text="%available%"
			                android:textSize="@dimen/text_size_12sp"/>                        
		        	</LinearLayout>
            	</LinearLayout>
        </LinearLayout>
        <LinearLayout
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:orientation="vertical"
            	android:layout_marginLeft="10.0dip">
	            <TextView
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:text="@string/lbl_sd_memory"
	                android:textSize="@dimen/text_size_16sp"
	                android:textStyle="bold"/>         
				<ImageView style="@style/Divider"/> 	                   	
            	<LinearLayout
            	    android:layout_width="wrap_content"
            	    android:layout_height="wrap_content"
            	    android:orientation="horizontal"
            	    android:padding="4.0dip">
            	    <com.tresksoft.graphics.PieChart
		            	android:id="@+id/piechart_sd_memory"
		            	android:layout_width="44.0dip"
		            	android:layout_height="44.0dip"/>
            	    <LinearLayout
		            	android:layout_width="wrap_content"
		            	android:layout_height="wrap_content"
		            	android:orientation="vertical"
		            	android:layout_marginLeft="6.0dip">
			            <TextView 
			                android:id="@+id/memoria_sd_total"
			                android:layout_width="wrap_content"
			                android:layout_height="wrap_content"
			                android:text="%total%"
			                android:textSize="@dimen/text_size_12sp"/>
			            <TextView 
			                android:id="@+id/memoria_sd_disponible"
			                android:layout_width="wrap_content"
			                android:layout_height="wrap_content"
			                android:text="%available%"
			                android:textSize="@dimen/text_size_12sp"/>                        
		        	</LinearLayout>
            	</LinearLayout>
        </LinearLayout>    
    </LinearLayout>
	<ImageView style="@style/Divider"/> 
	<LinearLayout 
	    style="@style/StatusBar">
        <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal">
	        <LinearLayout android:id="@+id/id_menu_filter_apps" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="4dip" android:focusable="true" android:clickable="true" android:background="@drawable/list_item_bg_style">
		    	<TextView android:id="@+id/lbl_filter_apps" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lbl_filter_all_apps"/> 
		    	<ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="bottom" android:background="@drawable/ic_lista"/>            
	        </LinearLayout>
	    	<View style="@style/TitleBarSpring" />   
	        <LinearLayout android:id="@+id/id_menu_order_apps" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="4dip" android:focusable="true" android:clickable="true" android:background="@drawable/list_item_bg_style">
		    	<TextView android:id="@+id/lbl_order_apps" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lbl_order_name"/> 
		    	<ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="bottom" android:background="@drawable/ic_lista"/>            
	        </LinearLayout>  
        </LinearLayout>  	 	    
	</LinearLayout>
	<ImageView android:background="@drawable/list_divider" android:layout_width="fill_parent" android:layout_height="wrap_content" xmlns:android="http://schemas.android.com/apk/res/android" />		    
    <ListView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" 
        android:layout_weight="1"
        android:scrollbars="vertical"
        android:scrollbarSize="20dip"
        android:fastScrollEnabled="true"
        android:divider="@drawable/list_divider"
        android:background="@android:color/transparent"/>    
</LinearLayout>
